--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
